DB-8960 Update platforms documentation (#3114)
* DB-8960 Update platform documentation

* Add HBase Client Configuration Snippet